--- a/TicTacToe/maintictactoe.ui
+++ b/TicTacToe/maintictactoe.ui
@@ -135,6 +135,25 @@
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="btnStat">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>290</y>
+      <width>141</width>
+      <height>37</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Statistics</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -142,7 +161,7 @@
      <x>0</x>
      <y>0</y>
      <width>604</width>
-     <height>26</height>
+     <height>27</height>
     </rect>
    </property>
   </widget>
